k8s/ab-testing/service-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-fitness-svc-a
  labels:
    app: aceest-fitness
    variant: version-a
    strategy: ab-testing
spec:
  type: ClusterIP
  selector:
    app: aceest-fitness
    variant: version-a
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
