k8s/ab-testing/service-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-fitness-svc-b
  labels:
    app: aceest-fitness
    variant: version-b
    strategy: ab-testing
spec:
  type: ClusterIP
  selector:
    app: aceest-fitness
    variant: version-b
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
